feat: replace boilerplate informations with mine

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,7 +10,7 @@ interface Props {
 const { projects } = Astro.props;
 ---
 
-<Section text="Featured Projects" href="projects">
+<Section text="Mes Projets" href="projects">
   {
     projects.map(({ name, summary, image, linkPreview, linkSource }, index) => {
       const top = 98 + index * 40;
@@ -47,8 +47,8 @@ const { projects } = Astro.props;
                 class="h-full w-[95%] rounded-ss-xl rounded-ee-2xl object-none object-left-top sm:h-[85%] sm:w-full"
                 src={image}
                 alt={name}
-                width="736"
-                height="483"
+                // width="736"
+                // height="483"
               />
             </div>
           </div>
